--- a/eqr.html
+++ b/eqr.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Emergency QR</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="Emergency QR">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="By encoding all of your medical information into a compact QR code, EQR empowers patients to communicate vital medical information to emergency responders even while unconscious.">
 	<link rel="canonical" href="https://rupumped.github.io/eqr.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Emergency QR">
+	<meta property="og:description" content="By encoding all of your medical information into a compact QR code, EQR empowers patients to communicate vital medical information to emergency responders even while unconscious.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/eqr-cover.jpg">
+	<meta property="og:image:width" content="2000">
+	<meta property="og:image:height" content="800">
+	<meta property="og:image:alt" content="A gloved hand holding a wallet and a card with a QR labeled 'Emergency Medical Information SCAN ME'">
+	<meta property="og:url" content="https://rupumped.github.io/eqr.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
