--- a/gospel-authorship.html
+++ b/gospel-authorship.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Gospel Authorship</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="None of the Gospels were likely written by someone who had met Jesus. This is my quest for a sola-scriptura understanding of what Jesus was like.">
 	<link rel="canonical" href="https://rupumped.github.io/gospel-authorship.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Gospel Authorship">
+	<meta property="og:description" content="None of the Gospels were likely written by someone who had met Jesus. This is my quest for a sola-scriptura understanding of what Jesus was like.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/gospels.jpg">
+	<meta property="og:image:width" content="962">
+	<meta property="og:image:height" content="962">
+	<meta property="og:image:alt" content="A stained glass window of an anonymous evangelist writing a gospel">
+	<meta property="og:url" content="https://rupumped.github.io/gospel-authorship.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
