--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Guide to Kenya</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="A practical guide for new residents written by an American living in Kenya">
 	<link rel="canonical" href="https://rupumped.github.io/guide-to-kenya.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Guide to Kenya">
+	<meta property="og:description" content="A practical guide for new residents written by an American living in Kenya">
+	<meta property="og:image" content="https://rupumped.github.io/blog/kenya.jpg">
+	<meta property="og:image:width" content="1184">
+	<meta property="og:image:height" content="1184">
+	<meta property="og:image:alt" content="My friends and I feeding a giraffe">
+	<meta property="og:url" content="https://rupumped.github.io/guide-to-kenya.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
