--- a/kalobeyei.html
+++ b/kalobeyei.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Kalobeyei Refugee Settlement Solar Mini-Grid</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="Blockchain-based carbon assets">
-	<link rel="canonical" href="https://rupumped.github.io/rrecs.html">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="In 2022, we expanded the generation system to 541 kW with grant assistance from the Kakuma-Kalobeyei Challenge Fund and GIZ, and extended power lines throughout the villages, bringing electricity to over 2700 customers.">
+	<link rel="canonical" href="https://rupumped.github.io/kalobeyei.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Kalobeyei Refugee Settlement Solar Mini-Grid">
+	<meta property="og:description" content="In 2022, we expanded the generation system to 541 kW with grant assistance from the Kakuma-Kalobeyei Challenge Fund and GIZ, and extended power lines throughout the villages, bringing electricity to over 2700 customers.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/kalobeyei-cover.jpg">
+	<meta property="og:image:width" content="2000">
+	<meta property="og:image:height" content="801">
+	<meta property="og:image:alt" content="A drone photo of a solar-powered mini-grid">
+	<meta property="og:url" content="https://rupumped.github.io/kalobeyei.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=f5FuaYcldag">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -39,7 +51,7 @@
 
 	<main>
 		<div class="cover section">
-			<img src="project-pages/kalobeyei-cover.jpg" alt="An environmentally sustainable blockchain.">
+			<img src="project-pages/kalobeyei-cover.jpg" alt="A drone photo of a solar-powered mini-grid">
 			<h1>Kenya's Largest Solar Mini-Grid</h1>
 		</div>
 
