--- a/power-vs-energy.html
+++ b/power-vs-energy.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>How Mistaking Power for Energy Almost Cost Millions</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Learn how pedanticism and collaborative physics ensured rural farmers' access to affordable, renewable electricity, and how you can understand the difference between power and energy.">
 	<link rel="canonical" href="https://rupumped.github.io/power-vs-energy.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="How Mistaking Power for Energy Almost Cost Millions">
+	<meta property="og:description" content="Learn how pedanticism and collaborative physics ensured rural farmers' access to affordable, renewable electricity, and how you can understand the difference between power and energy.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/power-vs-energy.jpg">
+	<meta property="og:image:width" content="480">
+	<meta property="og:image:height" content="480">
+	<meta property="og:image:alt" content="A mountain bike, a stove, a shower, a candle, and a car">
+	<meta property="og:url" content="https://rupumped.github.io/power-vs-energy.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
