--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Common Public Speaking Problems and Exercises to Fix Them</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Swallow a tablespoon of honey. Then, rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.">
 	<link rel="canonical" href="https://rupumped.github.io/public-speaking-problems.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Common Public Speaking Problems and Exercises to Fix Them">
+	<meta property="og:description" content="Swallow a tablespoon of honey. Then, rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/public-speaking.jpg">
+	<meta property="og:image:width" content="364">
+	<meta property="og:image:height" content="364">
+	<meta property="og:image:alt" content="Me speaking publicly">
+	<meta property="og:url" content="https://rupumped.github.io/public-speaking-problems.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
