--- a/spi.html
+++ b/spi.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>SolidarityPi</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="SolidarityPi Ecosystem for Offline-First Education">
 	<link rel="canonical" href="https://rupumped.github.io/spi.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="SolidarityPi">
+	<meta property="og:description" content="SolidarityPi Ecosystem for Offline-First Education">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/spi-cover.jpg">
+	<meta property="og:image:width" content="1061">
+	<meta property="og:image:height" content="424">
+	<meta property="og:image:alt" content="A drone photo of a refugee camp">
+	<meta property="og:url" content="https://rupumped.github.io/spi.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -39,7 +50,7 @@
 
 	<main>
 		<div class="cover section">
-			<img src="project-pages/spi-cover.jpg" alt="A drone flying in the sky">
+			<img src="project-pages/spi-cover.jpg" alt="A drone photo of a refugee camp">
 			<h1>SolidarityPi Ecosystem for Offline-First Education</h1>
 		</div>
 
