--- a/tinynets.html
+++ b/tinynets.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>TinyNets</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="TinyNets: A Lightweight Networking Strategy for Robotic Control Systems">
 	<link rel="canonical" href="https://rupumped.github.io/tinynets.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="TinyNets">
+	<meta property="og:description" content="TinyNets: A Lightweight Networking Strategy for Robotic Control Systems">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/tinynets-cover.jpg">
+	<meta property="og:image:width" content="1920">
+	<meta property="og:image:height" content="768">
+	<meta property="og:image:alt" content="A physical network implemented on breadboards">
+	<meta property="og:url" content="https://rupumped.github.io/tinynets.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=4Rnn4MHgGAw">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
