--- a/about.html
+++ b/about.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>About Me</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="About Nicholas Selby">
 	<link rel="canonical" href="https://rupumped.github.io/about.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="About Me">
+	<meta property="og:description" content="About Nicholas Selby">
+	<meta property="og:image" content="https://raw.githubusercontent.com/rupumped/rupumped/main/gh-header.png">
+	<meta property="og:image:width" content="1518">
+	<meta property="og:image:height" content="494">
+	<meta property="og:image:alt" content="Nicholas Selby: Engineering that Centers Users and Their Communities">
+	<meta property="og:url" content="https://rupumped.github.io/about.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -18,6 +29,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet"> 
 
+	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
