--- a/biblical-inerrancy.html
+++ b/biblical-inerrancy.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Biblical Inerrancy</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="I grew up believing that everything written in the Bible was literally true. I aim to guide a deconstruction of biblical inerrancy and provide an alternative view in which I have found freedom.">
 	<link rel="canonical" href="https://rupumped.github.io/biblical-inerrancy.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Biblical Inerrancy">
+	<meta property="og:description" content="I grew up believing that everything written in the Bible was literally true. I aim to guide a deconstruction of biblical inerrancy and provide an alternative view in which I have found freedom.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/biblical-inerrancy.jpg">
+	<meta property="og:image:width" content="1000">
+	<meta property="og:image:height" content="1000">
+	<meta property="og:image:alt" content="A bible in a dark room">
+	<meta property="og:url" content="https://rupumped.github.io/biblical-inerrancy.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
