--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Blog</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Nicholas S. Selby's Blog">
 	<link rel="canonical" href="https://rupumped.github.io/blog.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Blog">
+	<meta property="og:description" content="Nicholas S. Selby's Blog">
+	<meta property="og:image" content="https://raw.githubusercontent.com/rupumped/rupumped/main/gh-header.png">
+	<meta property="og:image:width" content="1518">
+	<meta property="og:image:height" content="494">
+	<meta property="og:image:alt" content="Nicholas Selby: Engineering that Centers Users and Their Communities">
+	<meta property="og:url" content="https://rupumped.github.io/blog.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
