--- a/capstone.html
+++ b/capstone.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Aerial Mapping</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Aerial Mapping System for Urban Environments">
 	<link rel="canonical" href="https://rupumped.github.io/capstone.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Aerial Mapping">
+	<meta property="og:description" content="Aerial Mapping System for Urban Environments">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/capstone-cover.jpg">
+	<meta property="og:image:width" content="1751">
+	<meta property="og:image:height" content="700">
+	<meta property="og:image:alt" content="A drone flying in the sky">
+	<meta property="og:url" content="https://rupumped.github.io/capstone.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=OeNuO3kTnmA">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
