--- a/dfl.html
+++ b/dfl.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Autonomous Excavation</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="Autonomous Excavation">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="My dissertation focused on the application of lifting linearizations and machine learning to automate excavation in remote environments.">
 	<link rel="canonical" href="https://rupumped.github.io/dfl.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Autonomous Excavation">
+	<meta property="og:description" content="My dissertation focused on the application of lifting linearizations and machine learning to automate excavation in remote environments.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/dfl-cover.jpg">
+	<meta property="og:image:width" content="2485">
+	<meta property="og:image:height" content="998">
+	<meta property="og:image:alt" content="A simulation of an excavator digging">
+	<meta property="og:url" content="https://rupumped.github.io/dfl.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -39,7 +50,7 @@
 
 	<main>
 		<div class="cover section">
-			<img src="project-pages/dfl-cover.jpg" alt="A simulation of an excavator digging.">
+			<img src="project-pages/dfl-cover.jpg" alt="A simulation of an excavator digging">
 			<h1>Autonomous Excavation</h1>
 		</div>
 
