--- a/gtsr.html
+++ b/gtsr.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Solar Racing</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Nicholas Selby, Former Chief Engineer of the Georgia Tech Solar Racing Team">
 	<link rel="canonical" href="https://rupumped.github.io/gtsr.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Solar Racing">
+	<meta property="og:description" content="Nicholas Selby, Former Chief Engineer of the Georgia Tech Solar Racing Team">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/gtsr-cover.jpg">
+	<meta property="og:image:width" content="2048">
+	<meta property="og:image:height" content="819">
+	<meta property="og:image:alt" content="A solar-powered racecar">
+	<meta property="og:url" content="https://rupumped.github.io/gtsr.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -39,7 +50,7 @@
 
 	<main>
 		<div class="cover section">
-			<img src="project-pages/gtsr-cover.jpg" alt="A physical network implemented on breadboards">
+			<img src="project-pages/gtsr-cover.jpg" alt="A solar-powered racecar">
 			<h1>Solar Racing</h1>
 		</div>
 
