--- a/kidney.html
+++ b/kidney.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>15 Steps to Donate a Kidney</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.">
 	<link rel="canonical" href="https://rupumped.github.io/kidney.html">
 	<script type="application/ld+json">
@@ -26,6 +27,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="15 Steps to Donate a Kidney">
+	<meta property="og:description" content="The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/kidney.jpg">
+	<meta property="og:image:width" content="1728">
+	<meta property="og:image:height" content="1728">
+	<meta property="og:image:alt" content="Me about to donate a kidney">
+	<meta property="og:url" content="https://rupumped.github.io/kidney.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
