--- a/line-losses.html
+++ b/line-losses.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>I2R Losses in Single- and Three-Phase Distribution Networks</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="How unbalanced do loads on a three-phase distribution network have to be to warrant reconfiguring the network to be single-phase?">
 	<link rel="canonical" href="https://rupumped.github.io/line-losses.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="I2R Losses in Single- and Three-Phase Distribution Networks">
+	<meta property="og:description" content="How unbalanced do loads on a three-phase distribution network have to be to warrant reconfiguring the network to be single-phase?">
+	<meta property="og:image" content="https://rupumped.github.io/blog/line-losses.jpg">
+	<meta property="og:image:width" content="3000">
+	<meta property="og:image:height" content="3000">
+	<meta property="og:image:alt" content="A power line pole">
+	<meta property="og:url" content="https://rupumped.github.io/line-losses.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
