--- a/lowtemp.html
+++ b/lowtemp.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Quantum Computing</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Low Temperature Physics for Quantum Computing">
 	<link rel="canonical" href="https://rupumped.github.io/lowtemp.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Quantum Computing">
+	<meta property="og:description" content="Low Temperature Physics for Quantum Computing">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/lowtemp-cover.jpg">
+	<meta property="og:image:width" content="1013">
+	<meta property="og:image:height" content="405">
+	<meta property="og:image:alt" content="Scenes from low-temperature physics experiments">
+	<meta property="og:url" content="https://rupumped.github.io/lowtemp.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=a-O0BJFlavk">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
