--- a/ndte.html
+++ b/ndte.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Nondestructive Testing</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="Nondestructive Testing and Evaluation">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="I designed and implemented a novel air-coupled transducer calibration technique.">
 	<link rel="canonical" href="https://rupumped.github.io/ndte.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Nondestructive Testing">
+	<meta property="og:description" content="I designed and implemented a novel air-coupled transducer calibration technique.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/ndte-cover.jpg">
+	<meta property="og:image:width" content="878">
+	<meta property="og:image:height" content="351">
+	<meta property="og:image:alt" content="Surface plot of acoustic wave propagation through aluminum and air">
+	<meta property="og:url" content="https://rupumped.github.io/ndte.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
