--- a/rfind.html
+++ b/rfind.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-	<title>RFind</title>
+	<title>Wireless Sensing</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="RFind">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="Presenting RFind, a new technology that allows us to locate almost any object with extreme accuracy by transforming low-cost, battery-free wireless stickers into powerful radars.">
 	<link rel="canonical" href="https://rupumped.github.io/rfind.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Wireless Sensing">
+	<meta property="og:description" content="Presenting RFind, a new technology that allows us to locate almost any object with extreme accuracy by transforming low-cost, battery-free wireless stickers into powerful radars.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/rfind-cover.jpg">
+	<meta property="og:image:width" content="1157">
+	<meta property="og:image:height" content="463">
+	<meta property="og:image:alt" content="Hand holding smartphone showing a schematic of a living room">
+	<meta property="og:url" content="https://rupumped.github.io/rfind.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=nd7aDOO8dz4">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
