--- a/rfly.html
+++ b/rfly.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-	<title>RFly</title>
+	<title>Full-Duplex Wireless Relay</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
-	<meta name="description" content="RFly">
+	<meta name="author" content="Nicholas S. Selby">
+	<meta name="description" content="We introduce RFly, a drone-based wireless system that can scan and locate items in warehouses.">
 	<link rel="canonical" href="https://rupumped.github.io/rfly.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Full-Duplex Wireless Relay">
+	<meta property="og:description" content="We introduce RFly, a drone-based wireless system that can scan and locate items in warehouses.">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/rfly-cover.jpg">
+	<meta property="og:image:width" content="1400">
+	<meta property="og:image:height" content="561">
+	<meta property="og:image:alt" content="Drone with a mounted PCB">
+	<meta property="og:url" content="https://rupumped.github.io/rfly.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=fvPR09noiL8">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
