--- a/rrecs.html
+++ b/rrecs.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>R-RECs</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Blockchain-based carbon assets">
 	<link rel="canonical" href="https://rupumped.github.io/rrecs.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="R-RECs">
+	<meta property="og:description" content="Blockchain-based carbon assets">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/rrecs-cover.jpg">
+	<meta property="og:image:width" content="1024">
+	<meta property="og:image:height" content="410">
+	<meta property="og:image:alt" content="An environmentally sustainable blockchain">
+	<meta property="og:url" content="https://rupumped.github.io/rrecs.html">
+	<meta property="og:type" content="website">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -39,7 +50,7 @@
 
 	<main>
 		<div class="cover section">
-			<img src="project-pages/rrecs-cover.jpg" alt="An environmentally sustainable blockchain.">
+			<img src="project-pages/rrecs-cover.jpg" alt="An environmentally sustainable blockchain">
 			<h1>Blockchain-Based Carbon Assets</h1>
 		</div>
 
