--- a/teachbot.html
+++ b/teachbot.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>TeachBot</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="TeachBot: An Education System for Workforce Development">
 	<link rel="canonical" href="https://rupumped.github.io/teachbot.html">
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="TeachBot">
+	<meta property="og:description" content="TeachBot: An Education System for Workforce Development">
+	<meta property="og:image" content="https://rupumped.github.io/project-pages/teachbot-cover.jpg">
+	<meta property="og:image:width" content="1049">
+	<meta property="og:image:height" content="419">
+	<meta property="og:image:alt" content="A student interacting with a collaborative manufacturing robot">
+	<meta property="og:url" content="https://rupumped.github.io/teachbot.html">
+	<meta property="og:type" content="website">
+	<meta property="og:video" content="https://www.youtube.com/watch?v=qiIvc157bzc">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
