--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<!-- Open Graph Tags -->
 	<meta property="og:title" content="Nicholas S. Selby">
 	<meta property="og:description" content="Personal website of Nicholas S. Selby">
-	<meta property="og:image" content="https://raw.githubusercontent.com/rupumped/rupumped/main/gh-header.png">
-	<meta property="og:image:width" content="1518">
-	<meta property="og:image:height" content="494">
+	<meta property="og:image" content="https://rupumped.github.io/og-image.jpg">
+	<meta property="og:image:width" content="1498">
+	<meta property="og:image:height" content="778">
 	<meta property="og:image:alt" content="Nicholas Selby: Engineering that Centers Users and Their Communities">
 	<meta property="og:url" content="https://rupumped.github.io/">
 	<meta property="og:type" content="website">
