make 404 links absolute

--- a/404.html
+++ b/404.html
@@ -29,13 +29,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="404/404.css">
+	<link rel="stylesheet" type="text/css" href="https://rupumped.github.io/main.css">
+	<link rel="stylesheet" type="text/css" href="https://rupumped.github.io/404/404.css">
 </head>
 <body>
 	<h2>404</h2>
-	<img id="headshot" src="homepage/headshot.jpg" alt="My professional headshot">
+	<img id="headshot" src="https://rupumped.github.io/homepage/headshot.jpg" alt="My professional headshot">
 	<h3>Nick here.<br>Sorry. This page hasn't been engineered yet.</h3>
-	<a id="home-button" href="index.html">Return Home</a>
+	<a id="home-button" href="https://rupumped.github.io/">Return Home</a>
 </body>
 </html>
