--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -264,6 +264,11 @@
 						<td>Come on</td>
 						<td>Poa</td>
 					</tr>
+					<tr>
+						<td>Uko aje</td>
+						<td>How are you?</td>
+						<td>Poa</td>
+					</tr>
 				</table>
 			</div>
 
