fiti and kiswahili sanifu

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -188,7 +188,7 @@
 
 			<p>In Kenya, the local language of the coastal and mostly Tanzanian Swahili tribe, Kiswahili, somehow ended up a lingua franca for most, but not all, of the country. Certainly, no other language besides English has nearly the same reach. However, you will often meet people who aren't good at it when you're in rural areas, especially children who haven't started learning it in school yet, or lots of people in northern Kenya who are just so far away that they don't care. Major tribal languages that you should know exist are Kikuyu, for the Kikuyu tribe around Nairobi and central Kenya; Dholuo, for the Luo tribe around Lake Victoria; Kikamba, for the Kamba tribe; and Maa, for the Maasai tribe.</p>
 
-			<p>I began learning Kiswahili using Duo Lingo. The app teaches Tanzanian and Coastal Kenyan Swahili, which is more formal than the Swahili spoken in most of Kenya. Nonetheless, the lessons were a great start. Some foreigners hire personal teachers once they move to Kenya to help them develop their language skills, especially with the more colloquial Sheng spoken in Nairobi.</p>
+			<p>I began learning Kiswahili using Duo Lingo. The app teaches Tanzanian and Coastal Kenyan Swahili, sometimes called "Kiswahili Sanifu" (Standard Swahili), which is more formal than the Swahili spoken in most of Kenya. Nonetheless, the lessons were a great start. Some foreigners hire personal teachers once they move to Kenya to help them develop their language skills, especially with the more colloquial Sheng spoken in Nairobi.</p>
 
 			<p>It seems like almost every conversation begins, or can nicely begin, with "How are you?" The most popular Kiswahili versions of that are:</p>
 			<div class="overflowable">
@@ -272,7 +272,7 @@
 				</table>
 			</div>
 
-			<p>"Mzuri" (good) and "poa" (cool) can be replaced by "salama" (peaceful). "Jambo" is only common in Tanzanian and Coastal Kiswahili. Coastal Kiswahili is a little more formal, so you might hear "Shikamoo" (I respect you) followed by "Marahaba" (I accept your respect) in formal settings or between a young person and someone older than them.</p>
+			<p>"Mzuri" (good/well) and "poa" (cool) are occasionally used interchangeably and can be substituted with "salama" (peaceful) or "fiti" (fit). "Jambo" is only common in Tanzanian and Coastal Kiswahili. Where Kiswahili Sanifu is spoken, you might hear "Shikamoo" (I respect you) followed by "Marahaba" (I accept your respect) in formal settings or between a young person and someone older than them.</p>
 
 			<p>If all of that seems overwhelming, the English "how are you" is always fine.</p>
 
