kenya pictures and Hell's Gate details

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -172,6 +172,12 @@
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
 			</ul>
 
+
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-kibanda.jpg" alt="My family and I enjoying lunch at a kibanda" style="width: 10cm;">
+				<figcaption>When my family visited me, I took them to a kibanda for a taste of Kenyan street food.</figcaption>
+			</figure>
+
 			<p>Nairobi also has several good bars and clubs:</p>
 			<ul>
 				<li><a rel="external" target="_blank" href="https://www.re-volver.co.ke/">Re\Volver</a>: speakeasy-style bar</li>
@@ -186,7 +192,7 @@
 			<h2>Language and Social Etiquette</h2>
 			<p>Kenya was a British colony and has a diverse population without a unifying indigenous language. Swahili, "Kiswahili" in Swahili, and English, "Kiingereza," play that role.</p>
 
-			<p>In Kenya, the local language of the coastal and mostly Tanzanian Swahili tribe, Kiswahili, somehow ended up a lingua franca for most, but not all, of the country. Certainly, no other language besides English has nearly the same reach. However, you will often meet people who aren't good at it when you're in rural areas, especially children who haven't started learning it in school yet, or lots of people in northern Kenya who are just so far away that they don't care. Major tribal languages that you should know exist are Kikuyu, for the Kikuyu tribe around Nairobi and central Kenya; Dholuo, for the Luo tribe around Lake Victoria; Kikamba, for the Kamba tribe; and Maa, for the Maasai tribe.</p>
+			<p>In Kenya, the local language of the coastal and mostly Tanzanian Swahili tribe, Kiswahili, ended up a lingua franca for most, but not all, of the country. Certainly, no other language besides English has nearly the same reach. However, you will often meet people who aren't good at it when you're in rural areas, especially children who haven't started learning it in school yet, or lots of people in northern Kenya who are just so far away that they don't care. Major tribal languages that you should know exist are Kikuyu, for the Kikuyu tribe around Nairobi and central Kenya; Dholuo, for the Luo tribe around Lake Victoria; Kikamba, for the Kamba tribe; and Maa, for the Maasai tribe.</p>
 
 			<p>I began learning Kiswahili using Duo Lingo. The app teaches Tanzanian and Coastal Kenyan Swahili, sometimes called "Kiswahili Sanifu" (Standard Swahili), which is more formal than the Swahili spoken in most of Kenya. Nonetheless, the lessons were a great start. Some foreigners hire personal teachers once they move to Kenya to help them develop their language skills, especially with the more colloquial Sheng spoken in Nairobi.</p>
 
@@ -350,6 +356,11 @@
 				<li>When invited to a Kenyan home for a meal, it is customary to bring a small gift, such as flowers or a dessert. Wash your hands before eating, as many traditional meals in Kenya are enjoyed without utensils. Observe the host's actions and follow their lead in terms of seating arrangements and table manners.</li>
 				<li>Respect personal space and maintain an appropriate physical distance when interacting with others. Public displays of affection are generally more reserved in Kenyan culture.</li>
 			</ul>
+
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-dinner.jpg" alt="Me about to enjoy a homemade Kenyan meal" style="width: 10cm;">
+				<figcaption>When you're lucky enough to be invited for a home-cooked Kenyan meal, come with an empty stomach.</figcaption>
+			</figure>
 		</section>
 
 		<section id="Money">
@@ -377,7 +388,7 @@
 
 			<p>To get M-Pesa, go to a Safaricom store building with your physical passport, not a soft copy, and pay $1 for a Safaricom SIM card. When you insert the SIM card into your phone, you will need to unlock it with a special, four-digit SIM PIN provided by Safaricom on the plastic case containing the SIM card. Doing so will install an app on your phone labeled "Safaricom" or "SIM Toolkit." That app will allow you to activate your M-Pesa account and, optionally, deactivate your SIM PIN so you don't have to enter it whenever you turn on your phone.</p>
 
-			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit and Remitly, too. <a rel="author" target="_blank" href="mailto:nicholas.selby@renewvia.com">Send me an email</a> before you install Sendwave, and I'll send you an invitation link that will get us $10 each.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit and Remitly, too.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
@@ -432,6 +443,11 @@
 				<li>Rideshare apps like <b>Uber</b>, and similar alternatives called <b>Bolt</b> and <b>Little</b>, work the same way as they do anywhere. They have different branding for their different tiers, but they essentially boil down to motorcycle taxis, small cars, medium cars, vans and SUVs, and women-only cars. Many foreigners prefer using rideshare apps instead of boda bodas for safety, both from crime and from traffic accidents. Personally, I ride boda bodas everywhere because it skips the traffic, but it isn't as safe. Bolt and Little are usually cheaper than Uber, and they also give drivers a larger percentage of the trip price. Regardless of the app, you can choose to pay with card, cash, or M-Pesa, but sometimes drivers will only agree to take you if you pay with cash or M-Pesa because the apps won't give them immediate access to money they made with card payments.</li>
 				<li>Minibusses, or "<b>matatus</b>" and "<b>SACCOs</b>," are 15-passenger vans driven by crazy people that go from everywhere to everywhere. It feels very chaotic and informal, so it's a hard system to figure out. So hard, in fact, that <a rel="external" target="_blank" href="https://news.mit.edu/2015/digital-matatus-project-makes-invisible-visible-0826">it took researchers from the University of Nairobi, Columbia, and MIT years to map the matatu transportation network</a>. If you do figure matatus out, riding in one will cost you almost nothing.</li>
 			</ul>
+
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-matatu.jpg" alt="A matatu in CBD" style="width: 15cm;">
+				<figcaption>Kenya's matatus are often creatively decorated.</figcaption>
+			</figure>
 
 			<h3>Between Cities</h3>
 			<p>Moving between cities and regions:</p>
@@ -511,6 +527,11 @@
 				<li><a rel="external" target="_blank" href="https://kws.go.ke/parks/nairobi-national-park">Nairobi National Park</a>: massive safari park in the city with wild lions, giraffes, rhinos, etc.</li>
 			</ul>
 
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-holi.jpg" alt="My friends and I celebrating holi" style="width: 15cm;">
+				<figcaption>Kenya, with the eighth most ethnically diverse population in the world, is a hub for vibrant cultural celebrations.</figcaption>
+			</figure>
+
 			<h3>Adventuring Around Kenya</h3>
 			<p>If you like hiking, join a hiking club! Groups of people ride in matatus to mountains around the country to enjoy hiking together, and the leaders plan everything for you. Probably the most popular option is <a rel="external" target="_blank" href="https://www.outdoorer.co/">Outdoorer</a>, but ask around to be added to WhatsApp groups of other clubs. There are no subscription fees; hikes are all priced <i>à la carte</i>. Here is an incomplete list of my favorite day hikes:</p>
 			<ul>
@@ -519,8 +540,14 @@
 				<li><a rel="external" target="_blank" href="https://africanspicesafaris.com/tour/mackinders-hut-mount-kenya-climbing-accommodation/">Mackinders Quest</a>, Mount Kenya: Tackle a strenuous hike that covers half of the hardest mainstream route up Mount Kenya.</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/9ZmUsigVHhBnGxTPA">Sleeping Warrior</a>: After circumnavigating the less-traveled crater, look at flamingos at nearby Lake Elementaita or hike the nearby Ugali Hills for an extra challenge. Hire local guides, bushmen of the Kenya Wildlife Service, to keep you safe from wild animals.</li>
 				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/aberdare-national-park">Aberdares</a>: This range features many beautiful hikes with waterfalls.</li>
-				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/hells-gate-national-park">Hell's Gate</a>: This national park has places to hike, bike, and swim.</li>
+				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/hells-gate-national-park">Hell's Gate</a>: <a rel="external" target="_blank" href="https://maps.app.goo.gl/jKQ23jrUDYcoNngw6">Rent bicycles</a> approximately two kilometers before reaching the northwest gate, and embark on a nine-kilometer <a rel="external" target="_blank" href="https://maps.app.goo.gl/yNTHvUUYtFxNPahf6">cycling safari</a> to the hot springs ("maji moto," literally "water fire" in Kiswahili) on the opposite side of the park. Before selecting a bike, perform a comprehensive test to ensure the tires are adequately inflated and the chain operates smoothly without skipping. I suggest exploring without a guide, but it's essential to maintain a safe distance from the wildlife and beware of flash floods in the slot canyons beyond the trail's end.
+				</li>
 			</ul>
+
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-ngong.jpg" alt="My friends laughing while I get surrounded by kids on Ngong Hills" style="width: 15cm;">
+				<figcaption>I find myself the center of attention while taking a break from hiking the Ngong Hills. Meanwhile, my friends are rolling their eyes in the foreground.</figcaption>
+			</figure>
 
 			<p>For adventures that require overnight stays:</p>
 			<ul>
@@ -537,6 +564,11 @@
 			</ul>
 
 			<p>Note that, in some towns, rideshare apps have low adoption, so be prepared to pay extra for taxis.</p>
+
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-beach.jpg" alt="Bar at the beach in Watamu" style="width: 15cm;">
+				<figcaption>Enjoy a cocktail and swim in the ocean while waiting for dinner at Lichthaus bar in Watamu.</figcaption>
+			</figure>
 
 			<h3>Recreational Substances</h3>
 			<p>Miraa, also known as khat, is a legal stimulant commonly used in East Africa. The leaves are typically chewed during casual social gatherings for their mild euphoric and stimulating effects. Tobacco, alcohol, and caffeine consumption are also common.</p>
@@ -566,13 +598,18 @@
 
 			<p>In addition to the quoted price, make sure to budget for <a rel="external" target="_blank" href="https://kws.go.ke/content/kws-charges">park entry fees</a>, drinks, snacks that you'll bring with you from Nairobi, souvenirs, and 10% for tips. If you don't want souvenirs, close and lock your car windows as you approach the gate to avoid being swarmed by merchants. Sometimes they will pull open car windows and throw items inside before demanding you pay for them. Use the phrase "Sitaki. Asante," which means "I don't want anything. Thank you."</p>
 
+			<figure>
+				<img class="img-center" src="blog-posts/kenya-safari.jpg" alt="Selfie with my friend and an elephant" style="width: 15cm;">
+				<figcaption>Obligatory elephant selfie</figcaption>
+			</figure>
+
 			<h3>Parks</h3>
 			<p>I have visited four safari parks in Kenya:</p>
 			<ul>
 				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Maasai_Mara">Maasai Mara</a></b> is arguably the most famous park in Kenya. It's name comes from the Maa word for "spotted," a reference to the short trees that cover the park. The Mara is located on the southern border of Kenya, directly connected to the Serengeti in Tanzania. The park hosts the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Serengeti#Great_migration">Great Migration</a>, one of the Wonders of the World, annually. Upside: in my opinion, the Maasai Mara is the best park for spotting game. Downside: due to its popularity, it can get a little crowded, and the park rangers fail to stop the safari drivers from going off road.</li>
 				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Amboseli_National_Park">Amboseli</a></b> is another Maasai park on Kenya's southern border. The name is a corruption of the Maasai word for "salty, dusty place." Upside: Amboseli is famous for its "tuskers," elephants with massive tusks, and its views of Mount Kilimanjaro are breathtaking. Downside: none.</li>
-				<li><b>Naivasha and Nakuru</b> offer two parks in one trip. Travel from Nairobi to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Hell%27s_Gate_National_Park">Hell's Gate</a> for a game drive on day one, then stay near <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Naivasha">Lake Naivasha</a>. On the second day, travel to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Nakuru#Lake_Nakuru_National_Park">Lake Nakuru</a> for the rest of your safari. Upside: the lakes are beautiful. Downside: there's less diversity of animals, and no elephants in either park.</li>
-				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Nairobi_National_Park">Nairobi National Park</a></b> is located in Nairobi, about 7 km south of the city center. Upside: it's budget-friendly and is the only park you can comfortably visit from Nairobi in less than one day, and it still has an impressive quantity of wildlife. Downside: it's smaller than most of the other safari parks and doesn't have elephants.</li>
+				<li><b>Naivasha and Nakuru</b> offer two parks in one trip. Travel from Nairobi to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Hell%27s_Gate_National_Park">Hell's Gate</a> for a game drive or bicycle safari on day one, then stay near <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Naivasha">Lake Naivasha</a>. On the second day, travel to <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Lake_Nakuru#Lake_Nakuru_National_Park">Lake Nakuru</a> for the rest of your safari. Upside: the lakes are beautiful. Downside: there's less diversity of animals, and no elephants in either park.</li>
+				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Nairobi_National_Park">Nairobi National Park</a></b> is located in Nairobi, about seven kilometers south of the city center. Upside: it's budget-friendly and is the only park you can comfortably visit from Nairobi in less than one day, and it still has an impressive quantity of wildlife. Downside: it's smaller than most of the other safari parks and doesn't have elephants.</li>
 			</ul>
 		</section>
 	</main>
