--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -116,12 +116,12 @@
 		<section id="Utilities">
 			<h2>Water, Electricity, and Internet</h2>
 			<h3>Water</h3>
-			<p>Tap water in Kenya is not safe to drink, but bathing and brushing teeth with it is fine. My housemates and I bought a 9 L Unilever Pureit Excella filter to make the tap water drinkable, and we like it.</p>
+			<p>Tap water in Kenya is not safe to drink, but bathing and brushing teeth with it is fine. My housemates and I get refillable 20-liter drinking water dispensers delivered to our house from <a rel="external" target="_blank" href="https://jibuco.com/ke/">Jibu</a>, and we like it.</p>
 
 			<h3>Electricity</h3>
 			<p>Kenya's electrical grid connects more than half of the country's residents, including almost everywhere in Nairobi, and the majority of energy is renewable, coming primarily from hydroelectric and geothermal sources.</p>
 			
-			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances' power  before you bring them to Kenya, especially high-power ones like blenders or blowdriers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
+			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances' power  before you bring them to Kenya, especially high-power ones like blenders or hair dryers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
 
 			<figure>
 				<img class="img-center" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/UK_BS_1363_plug_and_socket_%28IEC_Type_G%29.png" alt="UK BS 1363 plug and socket (IEC Type G)">
