resize pics in kenya guide

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -124,12 +124,12 @@
 			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances' power  before you bring them to Kenya, especially high-power ones like blenders or hair dryers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
 
 			<figure>
-				<img class="img-center" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/UK_BS_1363_plug_and_socket_%28IEC_Type_G%29.png" alt="UK BS 1363 plug and socket (IEC Type G)">
+				<img class="img-center" style="width: 10cm;" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/UK_BS_1363_plug_and_socket_%28IEC_Type_G%29.png" alt="UK BS 1363 plug and socket (IEC Type G)">
 				<figcaption>Source: Ukpluggerrr, <a rel="external" target="_blank" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/File:UK_BS_1363_plug_and_socket_(IEC_Type_G).png">Wikimedia Commons</a></figcaption>
 			</figure>
 
 			<figure>
-				<img class="img-center" src="blog-posts/psu-label.jpg" alt="Power supply label">
+				<img class="img-center" style="width: 24cm;" src="blog-posts/psu-label.jpg" alt="Power supply label">
 				<figcaption>Source: Fizz, <a rel="external" target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>, via <a rel="external" target="_blank" href="https://superuser.com/a/977605">SuperUser</a>. If the power supply label on your appliance lists the input as including 240 VAC or V~ and 50 Hz, like this one does, then it will work in Kenya. If it instead reads something like "INPUT: 120 VAC 60 Hz," then it will not.</figcaption>
 			</figure>
 
