hyphenate mini-grid

--- a/business-card.html
+++ b/business-card.html
@@ -72,7 +72,7 @@
 			<p>Get shareable QR code</p>
 		</a>
 
-		<textarea id="notes" name="notes" placeholder="Write a note here for later. For example, 'Nick builds solar minigrids in Africa and is excited to collaborate!'" rows="4"></textarea>
+		<textarea id="notes" name="notes" placeholder="Write a note here for later. For example, 'Nick builds solar mini-grids in Africa and is excited to collaborate!'" rows="4"></textarea>
 	</main>
 </body>
 </html>
