--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -164,8 +164,7 @@
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/W9fDk5rGDx9fkFKs5">Chez Sonia</a>: fancy French restaurant with live music and garden seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
-				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite outdoor coworking cafe</li>
-				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WAQCNQ3wVmoExBv76">Wasp & Sprout</a>: my favorite indoor coworking cafe</li>
+				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite coworking cafe</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
